<resources>
    <string name="app_name">YumYard</string>
    <string name="onboard_title">Niềm vui được mang đến,\n Thỏa mãn cơn thèm ăn.</string>
    <string name="onboard_subtitle">Tận hưởng sự tiện lợi của những bữa ăn ngon được giao tận nhà. Cùng nhau bắt đầu hành trình ẩm thực nào!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">859550527329-o5ufkbjddcdmqfg10f7obrvvudmmaq9n.apps.googleusercontent.com</string>
    <string name="otp_message">"Please enter the 6-digit-OTP we've sent to your phone number:"</string>

    <string name="prepared">Đặt hàng</string>
    <string name="pickingUp">Chuẩn bị</string>
    <string name="delivering">Giao hàng</string>
    <string name="finish">Thành công</string>

    <string name="preparedDesc">Đơn hàng đã được đặt</string>
    <string name="pickingUpDesc">Đang chuẩn bị hàng</string>
    <string name="deliveringDesc">Đang giao hàng</string>
    <string name="finishDesc">Đã giao hàng thành công</string>
    <string name="cancelOrder">Hủy đơn hàng</string>
    <string name="confirmOrder">Xác nhận đơn hàng</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="delete">Delete</string>

    <string name="location_type">Loại vị trí</string>
    <string name="recipient_name">Tên người nhận</string>
    <string name="phone_number">Số điện thoại</string>

    <string name="address">Địa chỉ</string>
    <string name="set_as_default_address">Đặt làm địa chỉ mặc định</string>
    <string name="country">Quốc gia</string>
    <string name="zip_code">Zip Code</string>
    <string name="choose_from_map">Chọn địa chỉ mới</string>

    <!--    Home Screen-->
    <string name="category">Danh mục</string>
    <string name="top_picks">Lựa chọn hàng đầu</string>
    <string name="top_rate">Đánh giá cao</string>
    <string name="best_selling">Bán chạy</string>
    <string name="ready_for_lunch">Sẵn sàng cho bữa ăn</string>

    <string name="greeting_message">Chào  </string>
    <string name="order_prompt">Bạn đã sẵn sàng đặt hàng chưa?</string>
    <string name="order_btn">Đặt hàng</string>
    <string name="total">Tổng</string>
    <string name="all_items">Tổng tiền món</string>
    <string name="delivery_fee">Phí giao hàng</string>
    <string name="discount">Giảm giá</string>
    <string name="note">Ghi chú</string>
    <string name="use_code">Nhập mã</string>
    <string name="enter_your_code">Nhập mã khuyến mãi</string>
    <string name="use_voucher">Sử dụng mã</string>
    <string name="tap_to_add">Thêm mã</string>
    <string name="tap_to_change">Thay đổi</string>
    <string name="choose_your_code">Thêm mã</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="choose_payment_method">Chọn phương thức thanh toán</string>
    <string name="standard_delivery">Giao hàng tiêu chuẩn</string>
    <string name="schedule_order">Đặt lịch giao hàng</string>
    <string name="pick_up_order">Thời gian nhận hàng</string>
    <string name="select_your_pick_up_time">Chọn thời gian nhận của bạn</string>
    <string name="cash_when_your_orders">Thanh toán bằng tiền mặt khi đơn hàng của bạn được giao đến tận nhà.</string>
    <string name="cash_on_delivery">Thanh toán khi nhận hàng</string>
    <string name="debit_credit_card">Thẻ ghi nợ/thẻ tín dụng</string>
    <string name="add_new_card">Thêm thẻ mới</string>
    <string name="choose_voucher">Chọn mã khuyến mãi</string>
    <string name="cash">Tiền mặt</string>
    <string name="confirm_payment">Xác nhận thanh toán</string>
    <string name="recipient_info">Thông tin người nhận</string>
    <string name="order_info">Thông tin đặt hàng</string>
    <string name="order_detail">Đơn hàng</string>
    <string name="order_placed">Đã đặt hàng</string>
    <string name="track_your_order">Theo dõi đơn hàng</string>
    <string name="return_home">Trang chủ</string>
    <string name="payment_successful">Thanh toán thành công</string>
    <string name="payment_successful_desc">Chúng tôi đang xử lý đơn hàng của bạn và sẽ sớm giao hàng cho bạn.</string>
    <string name="your_order_is_being_processed">Đơn hàng của bạn đang được xử lý</string>
    <string name="estimate">Thời gian ước tính</string>
    <string name="driver_info">Thông tin người giao hàng</string>
    <string name="cancel_order">Đã hủy</string>
    <string name="cancel_order_desc">Đơn hàng đã được hủy</string>
    <string name="choose_recipient">Địa chỉ nhận hàng</string>
    <string name="all_recipients">Tất cả địa chỉ</string>
    <string name="add_new_recipient">Thêm mới</string>
    <string name="select_your_location">Chọn vị trí của bạn</string>
    <string name="use_your_location">Sử dụng vị trí của bạn</string>

    <string name="recent_search">Kết quả tìm kiếm</string>
    <string name="choose_from_map2">Tiếp tục</string>
    <string name="confirm_location">Xác nhận</string>
    <string name="add_new">Thêm mới</string>
    <string name="payment_methods">Phương thức thanh toán</string>
    <string name="my_cards">Thẻ của tôi</string>

    <string name="label_name_on_card">Tên trên thẻ</string>
    <string name="hint_enter_your_name">Nhập tên của bạn</string>
    <string name="label_card_number">Số thẻ</string>
    <string name="hint_enter_card_number">Nhập số thẻ</string>
    <string name="expiration_date">Ngày hết hạn</string>

    <string name="screen_title_edit_card">Chỉnh sửa thẻ</string>
    <string name="hint_name_on_card">Ví dụ: Bruno Andersons</string>
    <string name="hint_card_number">Nhập số thẻ</string>
    <string name="label_expiration_date">Ngày hết hạn</string>
    <string name="hint_expiration_date">MM/YY</string>
    <string name="label_cvv">Mã CVV</string>
    <string name="hint_cvv">Mã bảo mật</string>
    <string name="button_edit_card">Cập nhật thẻ</string>
    <string name="reject_status">Đã hủy</string>
    <string name="reject_status_desc">Đã hủy từ nhà hàng</string>
    <string name="cancel_order_status_desc">Đã hủy từ người dùng</string>

    <string name="screen_title_orders">Đơn hàng</string>
    <string name="content_description_search">Tìm kiếm</string>
    <string name="tab_deliver">Đang giao</string>
    <string name="tab_history">Lịch sử</string>
    <string name="tab_basket">Giỏ hàng</string>
    <string name="label_active_orders">Đơn hàng đang hoạt động</string>

    <string name="content_description_delivery_illustration">Minh họa giao hàng</string>
    <string name="login_title">Bắt đầu ngay nào</string>
    <string name="login_subtitle">Tạo tài khoản để bắt đầu đặt hàng</string>
    <string name="continue_with">Tiếp tục với</string>
    <string name="button_google">Google</string>
    <string name="or_separator">Hoặc</string>
    <string name="label_your_email">Email của bạn</string>
    <string name="hint_enter_email">Nhập email của bạn</string>
    <string name="label_your_password">Mật khẩu của bạn</string>
    <string name="hint_enter_password">Nhập mật khẩu của bạn</string>
    <string name="terms_agreement_part1">Bằng việc nhấn "Tiếp tục", bạn đồng ý với</string>
    <string name="terms_and_conditions">Điều khoản và Điều kiện</string>
    <string name="button_continue">Tiếp tục</string>
    <string name="rateOrder">Đánh giá đơn hàng</string>
    <string name="content_description_back">Nút quay lại</string>
    <string name="title_rating_activity">Đánh giá Trải nghiệm của Bạn</string>
    <string name="button_return_home">Trang chủ</string>
    <string name="button_submit_review">Gửi Đánh giá</string>
    <!-- Food/Restaurant Rating Section -->
    <string name="title_food_rating">Đánh giá Món ăn</string>
    <!-- Driver Rating Section -->
    <string name="title_driver_rating">Đánh giá Tài xế</string>
    <string name="driver_info_placeholder">Adam West (34 LD 5225)</string>
    <string name="hint_driver_rating">Chạm để đánh giá</string>
    <!-- Comment Section -->
    <string name="title_comment">Bình luận về Trải nghiệm</string>
    <string name="hint_comment_experience">Mô tả trải nghiệm của bạn (ví dụ: Món ăn nóng hổi, tài xế thân thiện...)</string>
    <string name="label_history_orders">Lịch sử mua hàng</string>
    <string name="label_basket_orders">Giỏ hàng</string>
    <string name="notifications_title">Thông báo</string>
    <string name="messages_tab">Tin nhắn</string>
    <string name="not_applicable">Không đủ điều kiện</string>
    <string name="me">Tài khỏan</string>
</resources>