<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F9F9F9"
    tools:context=".view.OrdersFragment">



    <!-- 1. Header: Title + Search -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="13dp"
        android:gravity="center_vertical"
        android:baselineAligned="false">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_back" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/screen_title_orders"
            android:textColor="#222222"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <!-- 2. Tab buttons -->
    <LinearLayout
        android:id="@+id/tab_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnDeliver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_deliver"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/md_theme_onPrimary"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_history"
            android:textColor="@color/md_theme_onBackground"
            android:backgroundTint="@color/md_theme_surfaceVariant"
            android:layout_marginHorizontal="5dp" />

        <Button
            android:id="@+id/btnBasket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_basket"
            android:textColor="@color/md_theme_onBackground"
            android:backgroundTint="@color/md_theme_surfaceVariant"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_active_orders"
        android:textSize="25dp"
        android:id="@+id/orders_fragment_label"
        android:textColor="@color/color_text_home_page_text_black"
        android:paddingLeft="12dp"
        />

    <!-- 3. Content area -->
    <FrameLayout
        android:id="@+id/ordersContentFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp" />

</LinearLayout>